--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -126,7 +126,7 @@
                 <div class="total_top_4">
                     <div class="echarts_title">能力状态</div>
                     <div id="myChart3"></div>
-                    <div class="echarts_line" style="top:35%">
+                    <div class="echarts_line">
                         <span>应具备数</span></br><span id="ability_all_num">0</span>
                     </div>
                 </div>
