--- a/src/main/webapp/layout/tab/tab2.html
+++ b/src/main/webapp/layout/tab/tab2.html
@@ -392,6 +392,38 @@
                     <div class='sheshi_title'>标准状态</div>
                     <div class="biaozhun_left">
                         <div>牵头/参与起草数分布情况</div>
+                        <div class="biaozhun_left_left">
+                            <div class="biaozhun_world">
+                                <ul>
+                                    <li>71</li>
+                                    <li>国际标准</li>
+                                </ul>
+                            </div>
+                           <div class="biaozhun_country">
+                               <ul>
+                                   <li>86</li>
+                                   <li>国家标准</li>
+                               </ul>
+                           </div>
+                            <div class="biaozhun_hangye">
+                                <ul>
+                                    <li>58</li>
+                                    <li>行业标准</li>
+                                </ul>
+                            </div>
+                           <div class="biaozhun_qiye">
+                               <ul>
+                                   <li>768</li>
+                                   <li>企业标准</li>
+                               </ul>
+                           </div>
+                           <div class="biaozhun_total">
+                               <ul>
+                                   <li>牵头/参与起草数</li>
+                                   <li>982</li>
+                               </ul>
+                           </div>
+                        </div>
                     </div>
                     <div class="biaozhun_right">
                         <div>标准数量分布情况</div>
@@ -435,25 +467,39 @@
                         <ul>
                             <li>
                                 <div id="myChart32"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line1"></div>
                             <li>
                                 <div id="myChart33"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line2"></div>
                             <li>
                                 <div id="myChart34"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line3"></div>
                             <li>
                                 <div id="myChart35"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line4"></div>
                             <li>
                                 <div id="myChart36"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line5"></div>
                             <li>
                                 <div id="myChart37"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line6"></div>
                             <li>
                                 <div id="myChart38"></div>
+
                             </li>
+                            <div class="echarts_lines echarts_line7"></div>
                         </ul>
                     </div>
 
