--- a/src/main/webapp/layout/tab/tab2.html
+++ b/src/main/webapp/layout/tab/tab2.html
@@ -395,32 +395,32 @@
                         <div class="biaozhun_left_left">
                             <div class="biaozhun_world">
                                 <ul>
-                                    <li>71</li>
+                                    <li id="tab1_gjibz_id">0</li>
                                     <li>国际标准</li>
                                 </ul>
                             </div>
                            <div class="biaozhun_country">
                                <ul>
-                                   <li>86</li>
+                                   <li id="tab1_gjiabz_id">0</li>
                                    <li>国家标准</li>
                                </ul>
                            </div>
                             <div class="biaozhun_hangye">
                                 <ul>
-                                    <li>58</li>
+                                    <li id="tab1_hybz_id">0</li>
                                     <li>行业标准</li>
                                 </ul>
                             </div>
                            <div class="biaozhun_qiye">
                                <ul>
-                                   <li>768</li>
+                                   <li id="tab1_qybz_id">0</li>
                                    <li>企业标准</li>
                                </ul>
                            </div>
                            <div class="biaozhun_total">
                                <ul>
                                    <li>牵头/参与起草数</li>
-                                   <li>982</li>
+                                   <li id="tab1_qtqc_id">0</li>
                                </ul>
                            </div>
                         </div>
