补充丢掉的js

--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -116,6 +116,7 @@
                                     P4:小批验证 入厂/出厂 P5:年度型检 监督抽测"</h4>
 -->
                                 <div class="myChart"></div>
+                                <p><span>P1</span><span>P2</span><span>P3</span><span>P4</span><span>P5</span></p>
                             </div>
                         </div>
                     </div>
