--- a/src/main/webapp/layout/tab/tab4.html
+++ b/src/main/webapp/layout/tab/tab4.html
@@ -1,37 +1,54 @@
 <div class="box shuju_apply">
-            <div class="shuju_apply_top">
-                <div class="shuju_top_left">
-                    <div class="shuju_top_pie">
-                        <div id="myChart14"></div>
-                    </div>
-                    <div class="shuju_top_bar1">
-                        <div class="echarts_title echarts_title1">量产一致型号数</div>
-                        <div id="myChart15"></div>
-                    </div>
-                    <div class="shuju_top_bar2">
-                        <div class="echarts_title echarts_title1">量产不一致型号数</div>
-                        <div id="myChart16"></div>
-                    </div>
-                </div>
-                <div class="shuju_top_right">
-                    <div class="shuju_top_pie">
-                        <div id="myChart17"></div>
-                    </div>
-                    <div class="shuju_top_bar1">
-                        <div class="echarts_title echarts_title1">共产一致型号数</div>
-                        <div id="myChart18"></div>
-                    </div>
-                    <div class="shuju_top_bar2">
-                        <div class="echarts_title echarts_title1">共产不一致型号数</div>
-                        <div id="myChart19"></div>
-                    </div>
-                </div>
+    <div class="shuju_apply_top">
+        <!--14-19-->
+        <div class="shuju_apply_bottom_left">
+            <div class="echarts_title echarts_title2">量产一致性保障</div>
+            <div class="shuju_apply_bottom_pie">
+                <div id="myChart14"></div>
             </div>
-            <div class="shuju_apply_center"></div>
-            <div class="shuju_apply_bottom"></div>
+            <div class="shuju_apply_bottom_tab">
+                <ul>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                    <li>模块商1</li>
+                </ul>
+
+            </div>
+            <div class="shuju_apply_bottom_bar1">
+                <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
+                <div id="myChart15"></div>
+            </div>
+            <div class="shuju_apply_bottom_bar2">
+
+                <div id="myChart16"></div>
+            </div>
+
         </div>
+        <div class="shuju_apply_bottom_right">
+            <div class="echarts_title echarts_title2">共产一致性保障</div>
+            <div class="shuju_apply_bottom_pie">
+                <div id="myChart17"></div>
+            </div>
+            <div class="shuju_apply_bottom_bar1">
+
+                <div id="myChart18"></div>
+            </div>
+            <!--<div class="total_bottom_bar2">-->
+            <!--<div class="echarts_title echarts_title1">共产不一致型号数</div>-->
+            <!--<div id="myChart13"></div>-->
+            <!--</div>-->
+        </div>
+    </div>
+    <div class="shuju_apply_center"></div>
+    <div class="shuju_apply_bottom"></div>
+</div>
 
 
 <script>
-  
+
 </script>
