--- a/src/main/webapp/static/css/labMain.css
+++ b/src/main/webapp/static/css/labMain.css
@@ -11,14 +11,14 @@
 body{
 	color:#64ccff;
 	}
-a{color:#64ccff;}	
+a,a:hover{color:#64ccff;}	
 .lab_title,.lab_one_title,lab_two_title,lab_three_title{
 	color:#fff;
 	
 	}
 /**中海实验室  labMain start**/	
 /*content star*/
-#labMain_content{
+.labMain_content{
 	
 	/*width:133%;*/
 	height:100%;
@@ -29,7 +29,7 @@ a{color:#64ccff;}
 /*content end*/
 
 /*content top star*/
-#labMain_content_top{
+.labMain_content_top{
 	height:10%;
 	background:url(../img/labMain/labtitle_bg.png) 0 0 no-repeat;
    background-size:100% 100%;
@@ -42,7 +42,7 @@ a{color:#64ccff;}
 
 
 	
-#labMain_content_top h1 {
+.labMain_content_top h1 {
 	width:100%;
     position: relative;
 	
@@ -51,25 +51,26 @@ a{color:#64ccff;}
     color: #66CCFE;
 	vertical-align:middle;
    text-align:center;
-	  padding-top:0.5em;
+	  padding-top:1em;
 }
 
 	
 	
 	
-#labMain_ct_right{
+.labMain_ct_right{
 	position:absolute;
-	top:35%;
-	right:10%;
+	top:0.5em;
+	right:10em;
 	text-align:center;
 	}		
-#labMain_ct_right img{
+.labMain_ct_right img{
 	width:1.8em;
 	height:1.8em;
 	margin-bottom:.5em;
+	
 	}	
 /*content bottom star*/	
-#labMain_content_bottom{
+.labMain_content_bottom{
 	height:90%;	
 	display: flex;
     flex-direction: row;
@@ -77,7 +78,7 @@ a{color:#64ccff;}
 	
 }
 
-#labMain_cb_left{
+.labMain_cb_left{
 	flex:3;
 	background:url(../img/labMain/lab_left_border.png) 0 0 no-repeat;
 	background-size:100% 100%;
@@ -87,24 +88,26 @@ a{color:#64ccff;}
 	flex-direction: row;
 	}
  .lab_title{
-	font-size:1.2em;
+	font-size:1.3em;
 	position:absolute;
-	top:1.5%;
-	left:9.5%;
+	top:.5em;
+	left:9em;
+	
+	
 	}
-#labMain_cbl_one{
+.labMain_cbl_one{
 	flex:1;
 	height:100%;
 	
 	
 }
-#labMain_cbl_one img{
+.labMain_cbl_one img{
 	width:90%;
 	margin:4em 3em ;
 	vertical-align:middle;
 	
 }
-#labMain_cbl_two{
+.labMain_cbl_two{
     flex:1;	
 	
 	height:100%;
@@ -113,20 +116,20 @@ a{color:#64ccff;}
 	
 }
 
-#labMain_cblt_top{
+.labMain_cblt_top{
 	flex:1;
 	margin:1em;
 	display:flex;
 	flex-direction: column;
 }
-#labMain_cblt_tone{
+.labMain_cblt_tone{
 	flex:1;
 	
 	}
 
 	
 
-#labMain_cblt_tone h3,#labMain_cblt_ttwo h3{
+.labMain_cblt_tone h3,.labMain_cblt_ttwo h3{
 	font-size:1.2em;
 	margin:2em;
 	
@@ -139,16 +142,16 @@ a{color:#64ccff;}
 	
 	
 	}
-#labMain_cblt_tone p,#labMain_cblt_ttwo p{
+.labMain_cblt_tone p,.labMain_cblt_ttwo p{
 	margin:1em;
 	
 	}
-#labMain_cblt_ttwo{
+.labMain_cblt_ttwo{
 	flex:2;
 	/*background-color:#FC6;*/
 	
 	}		
-#labMain_cblt_bottom{
+.labMain_cblt_bottom{
 	flex:1;
 	/*background:red;*/
 	margin:1em;
@@ -156,13 +159,13 @@ a{color:#64ccff;}
 	
 	
 	}	
-#labMain_cb_right{
+.labMain_cb_right{
 	flex:1;
 	display:flex;
 	flex-direction: column;
 	
 	}
-#labMain_cbr_one{
+.labMain_cbr_one{
 	flex:1;
 	display:flex;
 	flex-direction: row;
@@ -173,14 +176,18 @@ a{color:#64ccff;}
 	
 	
 	}
+.labMain_cb_right h3{
+	font-size:1.2em;
+	
+	}	
 .lab_one_title{
 	position:absolute;
-	left:12%;
+	left:13%;
 	top:3%;
 	
 	
 	}	
-#labMain_cbr_two{
+.labMain_cbr_two{
 	flex:1;
 		display:flex;
 	flex-direction: row;
@@ -191,7 +198,7 @@ a{color:#64ccff;}
 	
 	
 	}
-#labMain_cbr_three{
+.labMain_cbr_three{
 	flex:1;
 		display:flex;
 	flex-direction: row;
@@ -203,194 +210,114 @@ a{color:#64ccff;}
 	
 	}
 	
-#labMain_cbro_ul{
+.labMain_cbro_ul{
 	flex:2;
 	font-size:1em;
-
+	
+	
+	
+	
+	
 }
 	
-#labMain_cbro_ul ul{
-	margin:70% auto;
+.labMain_cbro_ul ul{
+	margin:3em auto;
+	
 	width:100%;
-	height:80%;
+	height:70%;
+	padding-top:2em;
+	
+	
 	}
 	
 	
-#labMain_cbro_ul ul li{
-	height: 22%;
-	padding:0em 0.5em;
+.labMain_cbro_ul ul li{
+	/*padding:.5em .1em;
+	width:100%;
+	margin:.5em;
+	text-align:center;*/
+	
+	/*margin: 0.5em 0.4em;
+	padding:0.5em 0.5em;*/
+	height: 30%;
+	padding:0em 1.5em;
     overflow: hidden;
     /*text-overflow: ellipsis;*/
     white-space: nowrap;
-	text-align:center;
 }
-#labMain_cbro_ul  .li_bg{
+.labMain_cbro_ul  .li_bg{
 	width:1.8em;
 	height:1.8em;
 	background:red;
 	float:left;
 	background:url(../img/labMain/lab_status.png) 0 0 no-repeat;
 	background-size:100% 100%;
+	margin-right:.4em;
 	
 	
 	}
-#labMain_cbro_ul  .li_bg_01{
+.labMain_cbro_ul  .li_bg_01{
 	background:url(../img/labMain/lab_status.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}	
-#labMain_cbro_ul  .li_bg_02{
+.labMain_cbro_ul  .li_bg_02{
 	background:url(../img/labMain/sb.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}	
-#labMain_cbro_ul  .li_bg_03{
+.labMain_cbro_ul  .li_bg_03{
 	background:url(../img/labMain/dd.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}
-#labMain_cbro_ul  .li_bg_04{
+.labMain_cbro_ul  .li_bg_04{
 	background:url(../img/labMain/Pass%20rate.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}	
-#labMain_cbro_ul  .li_bg_05{
+.labMain_cbro_ul  .li_bg_05{
 	background:url(../img/labMain/on-time%20rate.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}	
-#labMain_cbro_ul  .li_bg_06{
+.labMain_cbro_ul  .li_bg_06{
 	background:url(../img/labMain/Satisfaction.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}		
-#labMain_cbro_ul  .li_bg_07{
+.labMain_cbro_ul  .li_bg_07{
 	background:url(../img/labMain/surveillance.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}	
-#labMain_cbro_ul  .li_bg_08{
+.labMain_cbro_ul  .li_bg_08{
 	background:url(../img/labMain/curve.png) 0 0 no-repeat;
 	background-size:100% 100%;
 	
 	}			
 
-#labMain_cbro_ul ul li a{
+.labMain_cbro_ul ul li a{
 	text-align:left;
+	font-size:1.1em;
 	
 	
 	}
-
-#labMain_cbr_three 	 #labMain_cbro_ul ul{
-	padding-top: 15%;
+	
+	
+.labMain_cbr_three ul {
+    padding-top: 4em;
 }
-#labMain_cbr_three 	 #labMain_cbro_ul ul li{
-	height: 30%;
+
+.labMain_cbr_three 	 .labMain_cbro_ul ul li{
+	padding:0em 1.5em;
+	height:30%;
 	}	
  		
-#labMain_cbro_content{
+.labMain_cbro_content{
 	flex:4;
 	height:70%;	
 	border:1px solid #00ccff;
-	margin:2.2em 1em 1em 1em;
-	}
-	
+	margin:3em 1em 1em 1em;
 
-	
-/**中海实验室 labMain end**/	
-@media screen and (min-width: 1920px){
-	
-body{
-	font-size:16px;
-	}
-	
-#labMain_content_top h1 {
-		padding-top:1.2em ;
-}
-
-#labMain_ct_right{
-	top:1em;
-}	
-
-
-#labMain_cbro_ul ul{
-	margin:4em auto;
-	
-	
-	}
-	
-	
-#labMain_cbro_ul ul li{
-	margin: 0.5em 0em 0.5em 0.5em;
-	padding:1em  0;
-}
-
-.lab_one_title {
-    left: 5.5em;
-    top: .6em;
-}
-
-#labMain_cbro_content {
-    margin: 4em 1em 1em 1em;
-}
-	
-	
-	
-	}
-	
-@media screen and (min-width: 7680px){
-	body{
-		font-size:62px;
-	}
-	#labMain_content_top h1 {
-		padding-top:0.8em ;
-    }
-
-#labMain_cbl_one img{
-	
-	margin:3em ;
-	
-}
-#labMain_cb_left .lab_title{
-	font-size:1.3em;
-	position:absolute;
-	top:0.3em;
-	left:7em;
-	
-	
-}
-
-	
-#labMain_cbro_ul ul{
-	margin:3em auto;
-	
-	
-	}
-	
-	
-#labMain_cbro_ul ul li{
-	
-	margin: 0.5em 1em;
-	padding:0.5em  0;
-}
-
-
-
-#labMain_cbro_ul ul li a{
-	font-size:1em;
-	text-align:left;
-	
-	
-	}
-.lab_one_title{
-	position:absolute;
-	left:4em;
-	top:0.3em;
-	
-	
-	}	
-	#labMain_cbro_content {
-    margin: 3em 1em 1em 1em;
-}
-	
 	}
