订单数据绑定

--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -137,8 +137,8 @@
                     <div class="echarts_title">一次合格率</div>
                     <div class="echarts_title_left">
                         <ul>
-                            <li>当年一次合格率为<span>96.8%</span></li>
-                            <li style="display: inline-block">同比上升</li><span>3.6%</span>
+                            <li>当年一次合格率为<span id="tab1_pass_rate_id">0%</span></li>
+                            <li style="display: inline-block">同比上升</li><span>3.24%</span>
                         </ul>
                     </div>
                     <div id="myChart4"></div>
