--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -38,9 +38,9 @@
                             <div class="order_all">
                                 <ul>
                                     <li>整机</li>
-                                    <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                                    <li class="sheshi_num"><spn id="once_pass_rate_zj"></spn><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                           alt=""></span><span
-                                            class="up_num">0.05%</span></li>
+                                            class="up_num">3.25%</span></li>
                                 </ul>
                                 <ul>
                                     <div id="myChart41"></div>
@@ -51,9 +51,9 @@
                             <div class="order_all">
                                 <ul>
                                     <li>模块</li>
-                                    <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                                    <li class="sheshi_num"><span id="once_pass_rate_mk"></span> <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                           alt=""></span><span
-                                            class="up_num">0.05%</span></li>
+                                            class="up_num">2.35%</span></li>
                                 </ul>
                                 <ul>
                                     <div id="myChart42"></div>
@@ -102,9 +102,9 @@
                             <div class="order_all">
                                 <ul>
                                     <li>2016年及时率</li>
-                                    <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                                    <li class="sheshi_num" ><span id="order_year_rate_2016">96%</span> <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                           alt=""></span><span
-                                            class="up_num">0.05%</span></li>
+                                            class="up_num" id="order_year_rate_up_2016">0.08%</span></li>
                                 </ul>
                                 <ul>
                                     <div id="myChart45"></div>
@@ -115,9 +115,9 @@
                             <div class="order_all">
                                 <ul>
                                     <li>2017年及时率</li>
-                                    <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                                    <li class="sheshi_num" ><span id="order_year_rate_2017">96% </span><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                           alt=""></span><span
-                                            class="up_num">0.05%</span></li>
+                                            class="up_num" id="order_year_rate_up_2017">0.05%</span></li>
                                 </ul>
                                 <ul>
                                     <div id="myChart46"></div>
