--- a/src/main/webapp/layout/right.html
+++ b/src/main/webapp/layout/right.html
@@ -41,10 +41,10 @@
     
  ##}
  <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
-<script src="${contextPath!}/static/js/right_statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/tab1_statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/tab2_statistics.js?time=New Date()"></script>
-
+<script src="${contextPath!}/static/js/tab3_statistics.js?time=New Date()"></script>
 
  <script>
     $(function () {
@@ -70,6 +70,7 @@
        
         loadTab1Data();
         loadTab2Data();
+        loadTab3Data();
     });
    
 </script>
