--- a/src/main/webapp/layout/labLine.html
+++ b/src/main/webapp/layout/labLine.html
@@ -14,13 +14,12 @@
     <div class="labMain_content_top">
         <h1>中海博瑞介绍</h1>
         <div class="labMain_ct_right">
-            <p><img src="../static/img/labMain/home.png"></p>
+            <p><img src="${contextPath!}/static/img/labMain/home.png"></p>
             <h3>中海博睿实验室</h3>
         </div>
     </div><!--头部content_top-->
 
     <div class="labMain_content_bottom">
-
         <div class="labMain_cb_left">
             <h3 class="lab_title shishijiance">实时监测</h3>
             <div class="shishi_left">
@@ -76,6 +75,7 @@
             <div class="shishi_right"></div>
 
         </div><!--labMain_cb_left-->
+
 
         <div class="labMain_cb_right">
             <div class="labMain_cbr_one">
