--- a/src/main/webapp/static/css/centerLab.css
+++ b/src/main/webapp/static/css/centerLab.css
@@ -1,413 +1,24 @@
-.box {
-    width: 100%;
-    height: 100%;
-    background-color: #020b22;
-    /*background: url("") no-repeat;*/
-    background-position: center;
+.labMain_cb_left{
+    display: none;
+}
+.labMain_cb_left_show{
+    display: block;
+}
+.labMain_cbr_one .labMain_cbro_content{
+    background: url("../img/labMain/right01.jpg") no-repeat;
     background-size: 100% 100%;
 }
-
-/*分页*/
-
-.fenye {
-    display: inline-block;
-    position: absolute;
-    top: 8%;
-    right: 0;
+.labMain_cbr_two .labMain_cbro_content{
+    background: url("../img/labMain/right02.jpg") no-repeat;
+    background-size: 100% 100%;
 }
-
-.pager li > a {
-    color: #66ccff;
+.labMain_cbr_three .labMain_cbro_content{
+    background: url("../img/labMain/right03.jpg") no-repeat;
+    background-size: 100% 100%;
 }
-
-.pager li > a:focus, .pager li > a:hover {
-    background-color: transparent;
-    /*border: 1px solid #66ccff;*/
-    color: #00e673;
+.zhbr_lab h3.lab_title {
+    left: 10.5%;
 }
-
-.pager li > a, .pager li > span {
-    background-color: transparent;
-    border: none;
+.zhbr_lab{
+    height: 97%;
 }
-
-/*选择框  下拉框*/
-.header_box {
-    width: 90%;
-    height: 10%;
-    /*background-color: #2e6da4;*/
-    margin: 0 auto;
-}
-
-.top_dropdown {
-    height: 10%;
-}
-
-.tabs li {
-    float: left;
-    margin-right: 1em;
-    margin-top: 1em;
-}
-
-.btn-default {
-    background-color: transparent;
-    border: 1px solid #66ccff;
-    color: #66ccff;
-}
-
-.btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .open > .dropdown-toggle.btn-default.focus, .open > .dropdown-toggle.btn-default:focus, .open > .dropdown-toggle.btn-default:hover {
-    background-color: #66ccff;
-    border: 1px solid #66ccff;
-    color: white;
-}
-
-.btn-default:hover {
-    background-color: #66ccff;
-    border: 1px solid #66ccff;
-    color: white;
-}
-
-.dropdown-menu {
-    background-color: #234f65;
-    border: 1px solid #66ccff;
-}
-
-.dropdown-menu li a {
-    color: white;
-    display: block;
-    width: 100%;
-}
-
-.dropdown-menu li {
-    padding: 0.1em;
-    margin: 0;
-    display: block;
-    float: none;
-}
-
-.dropdown-menu li a:hover {
-    background-color: #66ccff;
-}
-
-#title_box {
-    text-align: center;
-    margin: 0.5% auto;
-    color: #fff;
-    font-size: 1.2em;
-}
-
-/*video start*/
-
-/*.video_box {*/
-/*width: 100%;*/
-/*height: 85%;*/
-/*}*/
-
-/*.video_left {*/
-/*width: 15%;*/
-/*}*/
-
-/*.video_left ul {*/
-/*text-align: center;*/
-/*margin-left: 15%;*/
-/*}*/
-
-/*.video_left ul li {*/
-/*width: 80%;*/
-/*padding: 0.5em;*/
-/*background-color: #66ccff;*/
-/*text-align: center;*/
-/*margin-bottom: 0.5em;*/
-/*color: white;*/
-/*}*/
-
-/*.video_left ul li:hover {*/
-/*color: orange;*/
-/*}*/
-
-/*.video_right {*/
-/*width: 83%;*/
-/*height: 100%;*/
-/*margin: 0 auto;*/
-/*border: 1px solid red;*/
-/*}*/
-
-.video_play {
-    width: 95%;
-    height: 90%;
-    border: 1px solid #66ccff;
-    margin: 0 auto;
-}
-
-.videoBox p {
-    text-align: center;
-    color: #66ccff;
-    padding: 1%;
-    font-size: 1.2em;
-}
-
-/*video end*/
-
-/*equipment start*/
-.contents_box {
-    width: 100%;
-    height: 84%;
-    color: white;
-}
-
-.contents_box > ul {
-    height: 32%;
-    padding: 0 1%;
-}
-
-.contents_box > ul > li {
-    /*display: inline-block;*/
-    float: left;
-    width: 23%;
-    height: 87%;
-    text-align: center;
-    border: 1px solid #66ccff;
-    margin: 1%;
-    box-shadow: 1px 1px 5px white;
-}
-
-.contents_box > ul > li > table > th {
-    text-align: center;
-}
-
-.contents_box > ul > li > table {
-    width: 100%;
-}
-
-.contents_box > ul > li {
-    position: relative;
-}
-
-.contents_box > ul > li .tab_info {
-    color: #00e673;
-    position: absolute;
-    right: 1%;
-    top: 0;
-}
-
-.contents_box > ul > li > table tr td:first-of-type {
-    width: 30%;
-}
-
-.contents_box > ul > li > table tr td:last-of-type {
-    width: 70%;
-    text-align: left;
-}
-
-.progress {
-    width: 50%;
-    height: 0.8em;
-    margin-bottom: 0;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-.progress-bar {
-    font-size: 0.7em;
-    line-height: 0.9em;
-    height: 0.7em;
-    background-color: #66ccff;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-#pieEcharts1, #pieEcharts2, #pieEcharts3, #pieEcharts4, #pieEcharts5, #pieEcharts6, #pieEcharts7, #pieEcharts8, #pieEcharts9, #pieEcharts10, #pieEcharts11, #pieEcharts12 {
-    width: 15em;
-    height: 5em;
-    /*background-color: pink;*/
-}
-
-/*equipment end*/
-
-/*order start*/
-.order_box {
-    height: 84%;
-}
-
-.order_left {
-    width: 10%;
-    height: 100%;
-}
-
-.order_left ul {
-    text-align: center;
-    /*padding-left: 15%;*/
-    height: 100%;
-    /*background-color: lightblue;*/
-    /*padding-top: 3%;*/
-}
-
-.order_left ul li {
-    width: 100%;
-    /*padding: 0.5em;*/
-    /*background-color: #2e6da4;*/
-    text-align: center;
-    /*margin-bottom: 0.5em;*/
-    color: white;
-    padding-top: 3%;
-}
-
-.order_left ul li:nth-of-type(1) {
-    display: inline-block;
-    line-height: 2em;
-}
-
-.order_left ul li:nth-of-type(3) {
-    /*background-color: red;*/
-    height: 25%;
-}
-
-.order_left ul li:nth-of-type(4) {
-    /*background-color: yellow;*/
-    height: 25%;
-}
-
-.order_left ul li:nth-of-type(5) {
-    /*background-color: orange;*/
-    height: 25%;
-}
-
-.order_left ul li #pie1, #pie2, #pie3 {
-    width: 100%;
-    height: 100%;
-    /*background-color: lawngreen;*/
-}
-
-.order_right {
-    width: 90%;
-    height: 100%;
-}
-
-.order_right .order_views {
-    width: 100%;
-    height: 100%;
-    /*background-color: orange;*/
-}
-
-.order_right ul {
-    height: 32%;
-    padding: 1% 2.3%;
-    color: #66ccff;
-}
-
-.order_right ul li {
-    width: 16.6%;
-    height: 100%;
-    text-align: center;
-    border: 1px solid #66ccff;
-    box-shadow: 1px 1px 5px #66ccff;
-    float: left;
-    /*margin: 0.5%;*/
-}
-
-.order_right .order_views ul li #pie4,#pie5,#pie6,#pie7,#pie8,#pie9,#pie10,#pie11,#pie12,#pie13,#pie14,#pie15,#pie16,#pie17,#pie18,#pie19,#pie20,#pie21{
-    width: 100%;
-    height: 80%;
-    /*margin-top: 15%;*/
-    /*margin-top: 32%;*/
-}
-
-/*order end*/
-
-/*monitor start*/
-.monitor_box {
-    height: 84.5%;
-}
-
-.monitor_left {
-    width: 10%;
-    height: 100%;
-}
-
-.monitor_left ul {
-    text-align: center;
-    /*padding-left: 15%;*/
-    height: 100%;
-    /*background-color: lightblue;*/
-}
-
-.monitor_left ul li {
-    width: 100%;
-    padding: 0.5em;
-    /*background-color: #2e6da4;*/
-    text-align: center;
-    margin-bottom: 0.5em;
-    color: white;
-}
-
-.monitor_left ul li:hover {
-    color: #ff9933;
-}
-
-.monitor_right {
-    border: 1px solid #66ccff;
-    height: 95%;
-    width: 88%;
-}
-
-#line_box {
-    width: 95%;
-    height: 90%;
-    margin: 0 auto;
-}
-
-.radio_box {
-    margin-left: 2%;
-}
-
-#selectall {
-    /*background-color: #00B2F8;*/
-    background-color: transparent;
-    border: 1px solid #4397f7;
-    padding: 0.2em 0.5em;
-    margin: 0;
-    color: white;
-}
-
-#selectall:hover {
-    color: #ff9933;
-}
-
-/*monitor end*/
-
-/*monitor_lines start*/
-
-.legend_selected {
-    color: #ccc;
-}
-
-.divBlock {
-    width: 89%;
-    height: 68%;
-    /*padding-left: 10%;*/
-    position: absolute;
-}
-
-#main1, #main2 {
-    height: 60%;
-    width: 98%;
-}
-
-.legend_box {
-    position: relative;
-    top: 5%;
-    left: 2%;
-    /*height: 10em;*/
-}
-
-/*monitor_lines end*/
-
-/*ppt start*/
-/*ppt end*/
-
-/*info start*/
-/*info end*/
-
-/*lines start*/
-
-/*lines end*/
