--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -51,7 +51,7 @@
     width: 100%;
     height: 100%;
     padding-top: 10%;
-    padding-left: 10%;
+    /*padding-left: 10%;*/
     background: url("../img/labMain/dropmenu.png") no-repeat;
     background-size: 100% 100%;
 }
@@ -60,9 +60,12 @@
     height: auto;
     margin-left: 2%;
     text-align: left;
-    padding-left:15% ;
     position: relative;
     padding-top: 5%;
+
+}
+.sheshi_tab_list>ul>li a{
+    margin-left: 25%;
 }
 .sheshi_tab_list>ul>li>span{
     display: inline-block;
@@ -74,7 +77,7 @@
     background-size: 100% 100%;
     position: absolute;
     top: 30%;
-    left: 0;
+    left: 10%;
 
 
 }
@@ -82,7 +85,7 @@
     font-size: 1em;
 }
 #main1,#main2{
-    width: 100%;
+    width: 90%;
     height: 45%;
 }
 .shishi_right .sheshi_right_left{
@@ -121,9 +124,13 @@
 }
 .taiwei_hide li{
     display: inline-block;
-    width: 50%;
+    width: 100%;
+    background-color: rgba(102,204,254,0.2);
+    padding-left: 20%;
 }
 .taiwei_hide li:hover{
     /*background-color: #66ccff;*/
     color: white;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
 }
