--- a/src/main/webapp/static/css/index_right.css
+++ b/src/main/webapp/static/css/index_right.css
@@ -273,7 +273,7 @@
     position: absolute;
     top: 38%;
     left: 15%;
-    background: url("../img/TotalState/line.png") no-repeat;
+    background: url("../img/TotalState/line-2.png") no-repeat;
     background-size: 100% 100%;
 }
 #myChart2 {
